src/test/01-Basic/206-op-overload-public.txt
206-op-overload-public.ck:17:15: error: class 'Foo' has no member 'num'
[17] { return !foo.num; }
                   ^
206-op-overload-public.ck: ...in function 'int @operator~( Foo foo )'
